# snowfall-analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  pyproject.toml
data/: config.json
snowfall_data_extract/: __init__.py  cli.py  noaa.py
snowfall_data_extract/config/: __init__.py  models.py
snowfall_data_extract/sql/queries/: upsert_weather_data.sql  upsert_weather_station.sql
snowfall_data_extract/sql/schema/: weather_station.sql
snowfall_dbt/: .gitignore
src/snowfall_analytics/: __init__.py  cli.py  db.py  noaa.py  sql_loader.py
src/snowfall_analytics/config/: loader.py  models.py
src/snowfall_analytics/sql/: .sqlfluff
src/snowfall_analytics/sql/schema/: weather_data.sql
tests/: test_db.py  test_noaa.py  test_sql_loader.py
