[project]
name = "snowfall-analytics"
version = "0.1.0"
description = "NOAA snowfall data analytics pipeline"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic>=2.10.6", "duckdb>=1.2.0"]

[project.urls]
Repository = "https://github.com/nathanthorell/snowfall-analytics"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio", "pytest-cov", "respx"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
snowfall = "snowfall_analytics.cli:main"

[tool.setuptools.package-data]
"snowfall_analytics" = ["sql/**/*.sql"]

[tool.ruff]
target-version = "py312"
indent-width = 4
line-length = 95
exclude = ["*.json"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
python_version = "3.12"
warn_return_any = true
strict = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pyright]
venvPath = "."
venv = ".venv"
