[project]
name = "snowfall-analytics"
version = "0.1.0"
description = "NOAA snowfall data analytics pipeline"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx", "pydantic", "duckdb", "dbt-duckdb", "panel", "pandas"]

[project.urls]
Repository = "https://github.com/nathanthorell/snowfall-analytics"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "sqlfluff",
    "sqlfluff-templater-dbt"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
snowfall_data_extract = "snowfall_data_extract.cli:main"

[tool.setuptools]
py-modules = ["snowfall_data_extract"]

[tool.setuptools.package-data]
"snowfall_analytics" = ["sql/**/*.sql"]

[tool.ruff]
target-version = "py312"
indent-width = 4
line-length = 95
exclude = ["*.json"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_config = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["snowfall_data_extract", "snowfall_dbt", "snowfall_panel"]
exclude = ["build", "dist", "**/__pycache__"]
typeCheckingMode = "strict"
